--- a/backend/package.json
+++ b/backend/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "Duc Nguyen",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.1"
+   "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.9.0"
   },
   "devDependencies": {
     "eslint": "^9.14.0",
