--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "vee-validate": "^4.14.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
+    "vuex": "^4.0.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
