--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.2",
     "pinia": "^2.2.5",
     "popper.js": "^1.16.1",
     "vee-validate": "^4.14.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
+    "vue3-toastify": "^0.2.4",
     "vuex": "^4.0.2",
     "yup": "^1.4.0"
   },
