--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "pinia": "^2.2.5",
     "popper.js": "^1.16.1",
+    "sweetalert2": "^11.14.5",
     "vee-validate": "^4.14.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
